k8/04-deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata: 
  name: easyshop-deployment
  namespace: easyshop-ns
  labels:
    app: easyshop

spec:
  replicas: 3
  selector:
    matchLabels:
      app: easyshop

  template:
    metadata:
      name: easyshop-pod
      namespace: easyshop-ns
      labels:
        app: easyshop
    
    spec:
      containers:
      - name: easyshop-container
        image: hiimanshupawar/easyshop
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "500Mi"
            cpu: "300m"
          limits:
            memory: "800Mi"
            cpu: "500m"
