k8/06-statefulSet.yml
kind: StatefulSet
apiVersion: apps/v1

metadata:
  name: easyshop-statefulset
  namespace: easyshop-ns
  labels:
    app: mongodb

spec:
  serviceName: mongodb-service
  replicas: 3
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb-container
          image: mongo:latest
          ports:
            -  containerPort: 27017
          volumeMounts:
            - name: mongodb-vol
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
  
  volumeClaimTemplates:
    - metadata:
        name: mongodb-vol
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 5Gi
