k8/07-mongodb-service.yml
kind: Service
apiVersion: v1

metadata:
  name: mongodb-service
  namespace: easyshop-ns

spec:
  clusterIP: None
  selector:
    app: mongodb

  ports:
    - protocol: TCP
      targetPort: 27017
      port: 27017
