k8/08-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: easyshop-ingress
  namespace: easyshop-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easyshop-service
                port:
                  number: 80
